--- a/myapp/core/templates/core/login.html
+++ b/myapp/core/templates/core/login.html
@@ -28,12 +28,37 @@
                       <span></span>
                       <label>Password</label>
                     </div>
+                    <p class="error-message  {% if form.errors %}show{%else%}hide{% endif %}">Invalid username or password. Please try again or register if you don't have an account.</p>
+                    <style>
+                      .error-message {
+                          color: red;
+                      }
+                      
+                      .show {
+                          display: block;
+                      }
+                      
+                      .hide {
+                          display: none;
+                      }
+                  </style>
                     <div class="pass"><a href="{%url 'password_reset' %}" >Forgot Password?</a> </div>
                     <input type="submit" value="Login" />
                     <div class="signup_link">Not a member? <a href="{%url 'register'%}">Signup</a></div>
                   </form>
               </div>
           </div>
+          <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                const errorMessage = document.querySelector('.error-message');
+                
+                if (errorMessage) {
+                    setTimeout(function () {
+                        errorMessage.classList.add('hide');
+                    }, 6000); // 3000 milliseconds = 3 seconds
+                }
+            });
+        </script>
   </body>
 {%endif%}
 {%endblock%}
