--- a/myapp/core/templates/core/index.html
+++ b/myapp/core/templates/core/index.html
@@ -70,20 +70,41 @@
                                             />
                                         </div>
                                         {% comment %} scan option start {% endcomment %}
-                                        <div class="form-check form-check-inline m-3">
-                                            <input class="form-check-input" type="radio" name="scan_type" id="inlineRadio1" value="1" checked>
-                                            <label class="form-check-label" for="inlineRadio1">Basic Scan</label>
+                                        <div class="row">
+                                            <div class="col">
+                                                <div class="form-check form-check-inline mx-3 my-3">
+                                                    <input class="form-check-input" type="radio" name="scan_type" id="inlineRadio1" value="1" checked>
+                                                    <label class="form-check-label" for="inlineRadio1">Basic scan</label>
+                                                </div>
+                                            </div>
+
+                                            <div class="col">
+                                                <div class="form-check form-check-inline mx-3 my-3">
+                                                    <input class="form-check-input" type="radio" name="scan_type" id="inlineRadio2" value="2">
+                                                    <label class="form-check-label" for="inlineRadio2">Advanced scan</label>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <div class="form-check form-check-inline m-3">
-                                            <input class="form-check-input" type="radio" name="scan_type" id="inlineRadio2" value="2">
-                                            <label class="form-check-label" for="inlineRadio2">Advanced Scan</label>
-                                        </div>
-                                        <div class="form-check form-switch mx-5 my-3">
-                                            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" name="is_runscript">
-                                            <label class="form-check-label" for="flexSwitchCheckDefault">Run services scripts </label>
-                                        </div>
+
                                         {% comment %} scan option end {% endcomment %}
                                         
+                                        {% comment %} intrusive options start {% endcomment %}
+                                        <div class="row">
+                                            <div class="col">
+                                                <div class="custom-control custom-switch mx-3 my-3">
+                                                    <input type="radio" class="custom-control-input" id="customSwitch1" name="is_intrusive" value="silent">
+                                                    <label class="custom-control-label" for="customSwitch1">Silent (slower)</label>
+                                                </div>
+                                            </div>
+                                            
+                                            <div class="col">
+                                                <div class="custom-control custom-switch  mx-3 my-3">
+                                                    <input type="radio" class="custom-control-input" id="customSwitch2" name="is_intrusive" value="intrusive">
+                                                    <label class="custom-control-label" for="customSwitch2">Intrusive (faster)</label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        {% comment %} intrusive options end {% endcomment %}
                                         {% comment %} start shared with {% endcomment %}
                                         <div class="form-group">
                                         <div class="m-3">
