--- a/myapp/core/templates/core/setting.html
+++ b/myapp/core/templates/core/setting.html
@@ -17,6 +17,12 @@
                     <a class="list-group-item list-group-item-action" data-toggle="list" href="#delete-account" role="tab">
                         Delete account
                     </a>
+                    <a class="list-group-item list-group-item-action" data-toggle="list" href="#scanner-settings" role="tab">
+                        Scanner settings
+                    </a>
+                    <a class="list-group-item list-group-item-action" data-toggle="list" href="#check-update" role="tab">
+                        Check update
+                    </a>
                 </div>
             </div>
         </div>
@@ -32,7 +38,7 @@
                                     <label for="id_email">Email</label>
                                     <input type="email" class="form-control" id="id_email" name="email" required>
                                 </div>
-                                <button type="submit" class="btn btn-primary">Reset Password</button>
+                                <button type="submit" class="btn btn-success">Reset Password</button>
                             </form>
                         </div>
                     </div>
@@ -50,6 +56,39 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="tab-pane fade" id="scanner-settings" role="tabpanel">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Network scanner Settings</h5>
+                            <form method="post" action=".">
+                                {%csrf_token%}
+                                <div class="form-check form-switch mx-5 my-3">
+                                    {% if is_api == 1 %}
+                                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" name="is_api" checked>
+                                    {%else%}
+                                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" name="is_api">
+                                    {%endif%}
+                                    <label class="form-check-label" for="flexSwitchCheckDefault">Online Scanner (For up to date results)</label>
+                                </div>
+                                <button type="submit" class="btn btn-success" name="save_settings">Save settings</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tab-pane fade" id="check-update" role="tabpanel">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Check for updates</h5>
+                            <form>
+                                {%csrf_token%}
+                                <button type="submit" class="btn btn-primary">Check for updates</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
