modification of generatescan class in netscan app

--- a/myapp/core/templates/core/index.html
+++ b/myapp/core/templates/core/index.html
@@ -146,7 +146,7 @@
                                     </div>
                                     
                                     {% comment %} end shared with {% endcomment %}
-                                    <button type="submit" class="btn btn-primary m-3" name="scan">Scan</button>
+                                    <button type="submit" class="btn btn-primary m-3" name="Network_Scan">Scan</button>
 
                                     </form>
                                 </div>
