--- a/myapp/core/templates/core/index.html
+++ b/myapp/core/templates/core/index.html
@@ -92,14 +92,14 @@
                                         <div class="row">
                                             <div class="col">
                                                 <div class="custom-control custom-switch mx-3 my-3">
-                                                    <input type="radio" class="custom-control-input" id="customSwitch1" name="is_intrusive" value="silent">
+                                                    <input type="radio" class="custom-control-input" id="customSwitch1" name="is_intrusive" value="0">
                                                     <label class="custom-control-label" for="customSwitch1">Silent (slower)</label>
                                                 </div>
                                             </div>
                                             
                                             <div class="col">
                                                 <div class="custom-control custom-switch  mx-3 my-3">
-                                                    <input type="radio" class="custom-control-input" id="customSwitch2" name="is_intrusive" value="intrusive">
+                                                    <input type="radio" class="custom-control-input" id="customSwitch2" name="is_intrusive" value="1">
                                                     <label class="custom-control-label" for="customSwitch2">Intrusive (faster)</label>
                                                 </div>
                                             </div>
