--- a/myapp/host_Discovery/templates/host_Discovery/H_D.html
+++ b/myapp/host_Discovery/templates/host_Discovery/H_D.html
@@ -9,11 +9,11 @@
 
     <form method="post" action="{% url 'scan_network' %}">
         {% csrf_token %}
-        <label for="target_subnet">Target Subnet:</label>
+        <label for="target_subnet">Target Subnet(EX:192.168.1.0/24):</label>
         <input type="text" name="target_subnet" pattern="^(?:25[0-5]|2[0-4][0-9]|[0-1]?[0-9]?[0-9]\.){2}(?:25[0-5]|2[0-4][0-9]|[0-1]?[0-9]?[0-9])\.0/24$" value="{{ target_subnet }}" required>
         <br>
-        <label for="exclude_ips">Excluded IPs (comma-separated):</label>
-        <input type="text" name="exclude_ips"  value="{{ exclude_ips }}">
+        <label for="exclude_ips">Excluded IPs (comma-separated Ex:192.168.1.1,192.168.1.2):</label>
+        <input type="text" name="exclude_ips" pattern="^(\b(?:\d{1,3}\.){3}\d{1,3}\b)(,\s*\b(?:\d{1,3}\.){3}\d{1,3}\b)*$" value="{{ exclude_ips }}">
         <br>
         <label for="output_file">Output File:</label>
         <input type="text" name="output_file" value="{{ output_file }}">
