--- a/myapp/core/templates/core/index.html
+++ b/myapp/core/templates/core/index.html
@@ -7,6 +7,22 @@
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item active">Dashboard</li>
         </ol>
+
+        <div class="row">
+            <div class="col-xl-2 col-md-2">
+                <div class="card bg-light text-black mb-4">
+                    <!-- Customize the image source and alt text as needed -->
+                    <img class="card-img-top" src="{% static 'host_discovery.png' %}" alt="Card image cap">
+                    
+                    <div class="card-body">Host Discovery</div>
+                    <div class="card-footer d-flex align-items-center justify-content-between">
+                        <a class="small text-black stretched-link" href= "{%url 'discover'%}" >Discover</a>
+                    </div>
+        
+                </div>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-xl-2 col-md-2">
                 <div class="card bg-light text-black mb-4">
@@ -178,6 +194,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
         
 
