--- a/core/templates/core/scans.html
+++ b/core/templates/core/scans.html
@@ -53,7 +53,7 @@
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="layout-static.html">My scans</a>
+                                    <a class="nav-link" href="{%url 'myscans'%}">My scans</a>
                                     <a class="nav-link" href="layout-sidenav-light.html">Shared Scans</a>
                                 </nav>
                             </div>
