--- a/core/templates/core/networkscan.html
+++ b/core/templates/core/networkscan.html
@@ -55,36 +55,41 @@
                         </div>
                         <div class="col">
                             <label class="my-1 mr-2" for="share">Share report with</label>
-                            <select class="form-select" id="share" aria-label="Default select example">
-                                <option selected>Open this select menu</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
-                              </select>
+                            <div class="dropdown-center">
+                                <button class=" form-select" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                  Select users
+                                </button>
+                                <ul class="dropdown-menu ">
+                                {%for user in users%}
+                                    <li>                            
+                                        <div class="form-check m-2">
+                                            <input class="form-check-input" type="checkbox" name="{{user.0}}" value="{{user.0}}" id="flexCheckDefault">
+                                            <label class="form-check-label" for="flexCheckDefault">
+                                            {{user.1}}
+                                            </label>
+                                        </div>
+                                    </li>
+                                {%endfor%}
+                                </ul>
+                              </div>
                         </div>
                     </div>
                     <div class="row m-3">
                         <div class="col">
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                <input class="form-check-input" name="ide_evasion" type="checkbox" value="ide_evade" id="flexCheckDefault">
                                 <label class="form-check-label" for="flexCheckDefault">
                                 IDS Evasion (Beta)
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" >
-                                <label class="form-check-label" for="flexCheckDefault">
-                                use spoofed IP
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" >
+                                <input class="form-check-input" name="enum_scripts" type="checkbox" value="enum_scripts" id="flexCheckChecked" >
                                 <label class="form-check-label" for="flexCheckDefault">
                                 Run enumeration scripts (slow down scan)
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" >
+                                <input class="form-check-input" name="exploitability" type="checkbox" value="exploitability" id="flexCheckChecked" >
                                 <label class="form-check-label" for="flexCheckDefault">
                                 Check for exploitability (slow down scan)
                                 </label>
