--- a/core/templates/core/setting.html
+++ b/core/templates/core/setting.html
@@ -15,6 +15,8 @@
         <!-- Navbar Brand-->
         <a class="navbar-brand ps-3" href="{%url 'dashboard'%}">NetPackt</a>
         <!-- Sidebar Toggle-->
+                <!-- Sidebar Toggle-->
+
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
