host disocvery features

--- a/core/templates/core/hostdiscovery.html
+++ b/core/templates/core/hostdiscovery.html
@@ -20,7 +20,7 @@
                       </div>
                       <div class="col" id="ipInput">
                         <label class="my-1 mr-2" for="scan_name">Network subnet</label>
-                        <input type="text" name="subnet" class="form-control" placeholder="192.168.1.0/24">
+                        <input type="text" name="subnet" class="form-control" placeholder="EX : 192.168.1.0/24">
                       </div>
                     </div>
                     <div class="row m-3">
