Home page Added Netpackt logo

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -57,7 +57,7 @@
                     you suggestions and recommendations on how to improve your web security and performance.</p>
             </div>
             <div class="about-image">
-                <img src="OIG2-removebg-preview.png" alt="Netpackt logo">
+                <img src="Netpackt.png" alt="Netpackt logo">
             </div>
         </div>
     </main>
